aio_labels.py


# values for enumeration 'c__EA_AioNode'
kAioNodeForceSigned = -1
kAioNodeUnknown = 0
kAioNodeBattA = 1
kAioNodeBattB = 2
kAioNodeCmdFlightSpare = 3
kAioNodeCmdLoggerA = 4
kAioNodeCmdLoggerB = 5
kAioNodeCmdWebmonitor = 6
kAioNodeControllerA = 7
kAioNodeControllerB = 8
kAioNodeControllerC = 9
kAioNodeCsA = 10
kAioNodeCsB = 11
kAioNodeCsDynoA = 12
kAioNodeCsDynoB = 13
kAioNodeCsGsA = 14
kAioNodeCsGsB = 15
kAioNodeDrumSensorsA = 16
kAioNodeDrumSensorsB = 17
kAioNodeDynoMotorSbo = 18
kAioNodeDynoMotorSbi = 19
kAioNodeDynoMotorPbi = 20
kAioNodeDynoMotorPbo = 21
kAioNodeDynoMotorPto = 22
kAioNodeDynoMotorPti = 23
kAioNodeDynoMotorSti = 24
kAioNodeDynoMotorSto = 25
kAioNodeEopGsB = 26
kAioNodeEopWingB = 27
kAioNodeFcA = 28
kAioNodeFcB = 29
kAioNodeFcC = 30
kAioNodeGpsBaseStation = 31
kAioNodeGroundPowerQ7A = 32
kAioNodeGroundPowerTms570A = 33
kAioNodeGsEstimator = 34
kAioNodeJoystickA = 35
kAioNodeLightPort = 36
kAioNodeLightStbd = 37
kAioNodeLightTailBottom = 38
kAioNodeLightTailTop = 39
kAioNodeLoadcellPortA = 40
kAioNodeLoadcellPortB = 41
kAioNodeLoadcellStarboardA = 42
kAioNodeLoadcellStarboardB = 43
kAioNodeMotorSbo = 44
kAioNodeMotorSbi = 45
kAioNodeMotorPbi = 46
kAioNodeMotorPbo = 47
kAioNodeMotorPto = 48
kAioNodeMotorPti = 49
kAioNodeMotorSti = 50
kAioNodeMotorSto = 51
kAioNodeMvlv = 52
kAioNodeOperator = 53
kAioNodePlatformSensorsA = 54
kAioNodePlatformSensorsB = 55
kAioNodePlcGs02 = 56
kAioNodePlcTophat = 57
kAioNodeRecorderQ7Platform = 58
kAioNodeRecorderQ7Wing = 59
kAioNodeRecorderTms570Platform = 60
kAioNodeRecorderTms570Wing = 61
kAioNodeServoA1 = 62
kAioNodeServoA2 = 63
kAioNodeServoA4 = 64
kAioNodeServoA5 = 65
kAioNodeServoA7 = 66
kAioNodeServoA8 = 67
kAioNodeServoE1 = 68
kAioNodeServoE2 = 69
kAioNodeServoR1 = 70
kAioNodeServoR2 = 71
kAioNodeShortStack = 72
kAioNodeSimulatedJoystick = 73
kAioNodeSimulator = 74
kAioNodeTelemetrySnapshot = 75
kAioNodeTorqueCell = 76
kAioNodeUwbA = 77
kAioNodeUwbB = 78
kAioNodeUwbC = 79
kAioNodeUwbD = 80
kAioNodeVisualizer = 81
kNumAioNodes = 82
c__EA_AioNode = ctypes.c_int
AioNode = ctypes.c_int
BattLabelToBattAioNode = _libraries['avionics/network/_aio_labels.so'].BattLabelToBattAioNode
BattLabelToBattAioNode.restype = AioNode
BattLabelToBattAioNode.argtypes = [BattLabel]
BattAioNodeToBattLabel = _libraries['avionics/network/_aio_labels.so'].BattAioNodeToBattLabel
BattAioNodeToBattLabel.restype = BattLabel
BattAioNodeToBattLabel.argtypes = [AioNode]
CmdLabelToCmdAioNode = _libraries['avionics/network/_aio_labels.so'].CmdLabelToCmdAioNode
CmdLabelToCmdAioNode.restype = AioNode
CmdLabelToCmdAioNode.argtypes = [CmdLabel]
CmdAioNodeToCmdLabel = _libraries['avionics/network/_aio_labels.so'].CmdAioNodeToCmdLabel
CmdAioNodeToCmdLabel.restype = CmdLabel
CmdAioNodeToCmdLabel.argtypes = [AioNode]
ControllerLabelToControllerAioNode = _libraries['avionics/network/_aio_labels.so'].ControllerLabelToControllerAioNode
ControllerLabelToControllerAioNode.restype = AioNode
ControllerLabelToControllerAioNode.argtypes = [ControllerLabel]
ControllerAioNodeToControllerLabel = _libraries['avionics/network/_aio_labels.so'].ControllerAioNodeToControllerLabel
ControllerAioNodeToControllerLabel.restype = ControllerLabel
ControllerAioNodeToControllerLabel.argtypes = [AioNode]
CoreSwitchLabelToCoreSwitchAioNode = _libraries['avionics/network/_aio_labels.so'].CoreSwitchLabelToCoreSwitchAioNode
CoreSwitchLabelToCoreSwitchAioNode.restype = AioNode
CoreSwitchLabelToCoreSwitchAioNode.argtypes = [CoreSwitchLabel]
CoreSwitchAioNodeToCoreSwitchLabel = _libraries['avionics/network/_aio_labels.so'].CoreSwitchAioNodeToCoreSwitchLabel
CoreSwitchAioNodeToCoreSwitchLabel.restype = CoreSwitchLabel
CoreSwitchAioNodeToCoreSwitchLabel.argtypes = [AioNode]
DrumLabelToDrumAioNode = _libraries['avionics/network/_aio_labels.so'].DrumLabelToDrumAioNode
DrumLabelToDrumAioNode.restype = AioNode
DrumLabelToDrumAioNode.argtypes = [DrumLabel]
DrumAioNodeToDrumLabel = _libraries['avionics/network/_aio_labels.so'].DrumAioNodeToDrumLabel
DrumAioNodeToDrumLabel.restype = DrumLabel
DrumAioNodeToDrumLabel.argtypes = [AioNode]
DynoMotorLabelToDynoMotorAioNode = _libraries['avionics/network/_aio_labels.so'].DynoMotorLabelToDynoMotorAioNode
DynoMotorLabelToDynoMotorAioNode.restype = AioNode
DynoMotorLabelToDynoMotorAioNode.argtypes = [DynoMotorLabel]
DynoMotorAioNodeToDynoMotorLabel = _libraries['avionics/network/_aio_labels.so'].DynoMotorAioNodeToDynoMotorLabel
DynoMotorAioNodeToDynoMotorLabel.restype = DynoMotorLabel
DynoMotorAioNodeToDynoMotorLabel.argtypes = [AioNode]
EopLabelToEopAioNode = _libraries['avionics/network/_aio_labels.so'].EopLabelToEopAioNode
EopLabelToEopAioNode.restype = AioNode
EopLabelToEopAioNode.argtypes = [EopLabel]
EopAioNodeToEopLabel = _libraries['avionics/network/_aio_labels.so'].EopAioNodeToEopLabel
EopAioNodeToEopLabel.restype = EopLabel
EopAioNodeToEopLabel.argtypes = [AioNode]
FlightComputerLabelToFlightComputerAioNode = _libraries['avionics/network/_aio_labels.so'].FlightComputerLabelToFlightComputerAioNode
FlightComputerLabelToFlightComputerAioNode.restype = AioNode
FlightComputerLabelToFlightComputerAioNode.argtypes = [FlightComputerLabel]
FlightComputerAioNodeToFlightComputerLabel = _libraries['avionics/network/_aio_labels.so'].FlightComputerAioNodeToFlightComputerLabel
FlightComputerAioNodeToFlightComputerLabel.restype = FlightComputerLabel
FlightComputerAioNodeToFlightComputerLabel.argtypes = [AioNode]
GpsLabelToGpsAioNode = _libraries['avionics/network/_aio_labels.so'].GpsLabelToGpsAioNode
GpsLabelToGpsAioNode.restype = AioNode
GpsLabelToGpsAioNode.argtypes = [GpsLabel]
GpsAioNodeToGpsLabel = _libraries['avionics/network/_aio_labels.so'].GpsAioNodeToGpsLabel
GpsAioNodeToGpsLabel.restype = GpsLabel
GpsAioNodeToGpsLabel.argtypes = [AioNode]
GroundPowerQ7LabelToGroundPowerQ7AioNode = _libraries['avionics/network/_aio_labels.so'].GroundPowerQ7LabelToGroundPowerQ7AioNode
GroundPowerQ7LabelToGroundPowerQ7AioNode.restype = AioNode
GroundPowerQ7LabelToGroundPowerQ7AioNode.argtypes = [GroundPowerQ7Label]
GroundPowerQ7AioNodeToGroundPowerQ7Label = _libraries['avionics/network/_aio_labels.so'].GroundPowerQ7AioNodeToGroundPowerQ7Label
GroundPowerQ7AioNodeToGroundPowerQ7Label.restype = GroundPowerQ7Label
GroundPowerQ7AioNodeToGroundPowerQ7Label.argtypes = [AioNode]
GroundPowerTms570LabelToGroundPowerTms570AioNode = _libraries['avionics/network/_aio_labels.so'].GroundPowerTms570LabelToGroundPowerTms570AioNode
GroundPowerTms570LabelToGroundPowerTms570AioNode.restype = AioNode
GroundPowerTms570LabelToGroundPowerTms570AioNode.argtypes = [GroundPowerTms570Label]
GroundPowerTms570AioNodeToGroundPowerTms570Label = _libraries['avionics/network/_aio_labels.so'].GroundPowerTms570AioNodeToGroundPowerTms570Label
GroundPowerTms570AioNodeToGroundPowerTms570Label.restype = GroundPowerTms570Label
GroundPowerTms570AioNodeToGroundPowerTms570Label.argtypes = [AioNode]
GsEstimatorLabelToGsEstimatorAioNode = _libraries['avionics/network/_aio_labels.so'].GsEstimatorLabelToGsEstimatorAioNode
GsEstimatorLabelToGsEstimatorAioNode.restype = AioNode
GsEstimatorLabelToGsEstimatorAioNode.argtypes = [GsEstimatorLabel]
GsEstimatorAioNodeToGsEstimatorLabel = _libraries['avionics/network/_aio_labels.so'].GsEstimatorAioNodeToGsEstimatorLabel
GsEstimatorAioNodeToGsEstimatorLabel.restype = GsEstimatorLabel
GsEstimatorAioNodeToGsEstimatorLabel.argtypes = [AioNode]
JoystickLabelToJoystickAioNode = _libraries['avionics/network/_aio_labels.so'].JoystickLabelToJoystickAioNode
JoystickLabelToJoystickAioNode.restype = AioNode
JoystickLabelToJoystickAioNode.argtypes = [JoystickLabel]
JoystickAioNodeToJoystickLabel = _libraries['avionics/network/_aio_labels.so'].JoystickAioNodeToJoystickLabel
JoystickAioNodeToJoystickLabel.restype = JoystickLabel
JoystickAioNodeToJoystickLabel.argtypes = [AioNode]
LightLabelToLightAioNode = _libraries['avionics/network/_aio_labels.so'].LightLabelToLightAioNode
LightLabelToLightAioNode.restype = AioNode
LightLabelToLightAioNode.argtypes = [LightLabel]
LightAioNodeToLightLabel = _libraries['avionics/network/_aio_labels.so'].LightAioNodeToLightLabel
LightAioNodeToLightLabel.restype = LightLabel
LightAioNodeToLightLabel.argtypes = [AioNode]
LoadcellNodeLabelToLoadcellNodeAioNode = _libraries['avionics/network/_aio_labels.so'].LoadcellNodeLabelToLoadcellNodeAioNode
LoadcellNodeLabelToLoadcellNodeAioNode.restype = AioNode
LoadcellNodeLabelToLoadcellNodeAioNode.argtypes = [LoadcellNodeLabel]
LoadcellNodeAioNodeToLoadcellNodeLabel = _libraries['avionics/network/_aio_labels.so'].LoadcellNodeAioNodeToLoadcellNodeLabel
LoadcellNodeAioNodeToLoadcellNodeLabel.restype = LoadcellNodeLabel
LoadcellNodeAioNodeToLoadcellNodeLabel.argtypes = [AioNode]
MotorLabelToMotorAioNode = _libraries['avionics/network/_aio_labels.so'].MotorLabelToMotorAioNode
MotorLabelToMotorAioNode.restype = AioNode
MotorLabelToMotorAioNode.argtypes = [MotorLabel]
MotorAioNodeToMotorLabel = _libraries['avionics/network/_aio_labels.so'].MotorAioNodeToMotorLabel
MotorAioNodeToMotorLabel.restype = MotorLabel
MotorAioNodeToMotorLabel.argtypes = [AioNode]
MvlvLabelToMvlvAioNode = _libraries['avionics/network/_aio_labels.so'].MvlvLabelToMvlvAioNode
MvlvLabelToMvlvAioNode.restype = AioNode
MvlvLabelToMvlvAioNode.argtypes = [MvlvLabel]
MvlvAioNodeToMvlvLabel = _libraries['avionics/network/_aio_labels.so'].MvlvAioNodeToMvlvLabel
MvlvAioNodeToMvlvLabel.restype = MvlvLabel
MvlvAioNodeToMvlvLabel.argtypes = [AioNode]
OperatorLabelToOperatorAioNode = _libraries['avionics/network/_aio_labels.so'].OperatorLabelToOperatorAioNode
OperatorLabelToOperatorAioNode.restype = AioNode
OperatorLabelToOperatorAioNode.argtypes = [OperatorLabel]
OperatorAioNodeToOperatorLabel = _libraries['avionics/network/_aio_labels.so'].OperatorAioNodeToOperatorLabel
OperatorAioNodeToOperatorLabel.restype = OperatorLabel
OperatorAioNodeToOperatorLabel.argtypes = [AioNode]
PlatformLabelToPlatformAioNode = _libraries['avionics/network/_aio_labels.so'].PlatformLabelToPlatformAioNode
PlatformLabelToPlatformAioNode.restype = AioNode
PlatformLabelToPlatformAioNode.argtypes = [PlatformLabel]
PlatformAioNodeToPlatformLabel = _libraries['avionics/network/_aio_labels.so'].PlatformAioNodeToPlatformLabel
PlatformAioNodeToPlatformLabel.restype = PlatformLabel
PlatformAioNodeToPlatformLabel.argtypes = [AioNode]
PlcGs02LabelToPlcGs02AioNode = _libraries['avionics/network/_aio_labels.so'].PlcGs02LabelToPlcGs02AioNode
PlcGs02LabelToPlcGs02AioNode.restype = AioNode
PlcGs02LabelToPlcGs02AioNode.argtypes = [PlcGs02Label]
PlcGs02AioNodeToPlcGs02Label = _libraries['avionics/network/_aio_labels.so'].PlcGs02AioNodeToPlcGs02Label
PlcGs02AioNodeToPlcGs02Label.restype = PlcGs02Label
PlcGs02AioNodeToPlcGs02Label.argtypes = [AioNode]
PlcTophatLabelToPlcTophatAioNode = _libraries['avionics/network/_aio_labels.so'].PlcTophatLabelToPlcTophatAioNode
PlcTophatLabelToPlcTophatAioNode.restype = AioNode
PlcTophatLabelToPlcTophatAioNode.argtypes = [PlcTophatLabel]
PlcTophatAioNodeToPlcTophatLabel = _libraries['avionics/network/_aio_labels.so'].PlcTophatAioNodeToPlcTophatLabel
PlcTophatAioNodeToPlcTophatLabel.restype = PlcTophatLabel
PlcTophatAioNodeToPlcTophatLabel.argtypes = [AioNode]
RecorderQ7LabelToRecorderQ7AioNode = _libraries['avionics/network/_aio_labels.so'].RecorderQ7LabelToRecorderQ7AioNode
RecorderQ7LabelToRecorderQ7AioNode.restype = AioNode
RecorderQ7LabelToRecorderQ7AioNode.argtypes = [RecorderQ7Label]
RecorderQ7AioNodeToRecorderQ7Label = _libraries['avionics/network/_aio_labels.so'].RecorderQ7AioNodeToRecorderQ7Label
RecorderQ7AioNodeToRecorderQ7Label.restype = RecorderQ7Label
RecorderQ7AioNodeToRecorderQ7Label.argtypes = [AioNode]
RecorderTms570LabelToRecorderTms570AioNode = _libraries['avionics/network/_aio_labels.so'].RecorderTms570LabelToRecorderTms570AioNode
RecorderTms570LabelToRecorderTms570AioNode.restype = AioNode
RecorderTms570LabelToRecorderTms570AioNode.argtypes = [RecorderTms570Label]
